--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Voici une simple page web pour le cours App Web</h1>
-    <p>pour illustrer les conflits</p>
+    <p>pour illustrer les conflits modification de la branche 2</p>
 </body>
 
 </html>
